<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bottom_sheet_bg"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/imageView_report_bottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_black_report"
        app:tint="@color/image_color"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_report_bottomSheet"
        app:layout_constraintBottom_toBottomOf="@+id/textView_sub_report_bottomSheet" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_report_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/report"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textView_title_bottomSheet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_report_bottomSheet" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_sub_report_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        android:text="@string/report_sub"
        android:textColor="@color/textView_subTitle_bottomSheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_report_bottomSheet"
        app:layout_constraintTop_toBottomOf="@+id/textView_report_bottomSheet" />

    <View
        android:id="@+id/view_report_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/view_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sub_report_bottomSheet" />

    <RadioGroup
        android:id="@+id/radioGroup_report_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_report_bottomSheet">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_one_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copyright"
            android:buttonTint="@color/textView_app_color" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_two_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexual"
            android:buttonTint="@color/textView_app_color" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_three_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"
            android:buttonTint="@color/textView_app_color" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_report_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/tell_us"
        android:textColorHint="@color/textView_hint_editPro"
        app:boxStrokeColor="@color/textView_box_select_color"
        app:hintTextColor="@color/textView_hint_layout_editPro"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_report_bottomSheet">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_report_bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editText_style"
            android:textColor="@color/textView_subTitle_bottomSheet" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send_report_bottomSheet"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        app:backgroundTint="@color/button_bg"
        app:cornerRadius="10dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_report_bottomSheet" />

</androidx.constraintlayout.widget.ConstraintLayout>