<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/bottom_sheet_bg"
    app:cardCornerRadius="4dp"
    android:layout_margin="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_report_bottomSheet"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_black_report"
            app:layout_constraintBottom_toBottomOf="@+id/textView_sub_report_bottomSheet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_report_bottomSheet"
            app:tint="@color/image_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/com_report_title"
            android:textColor="@color/textView_title_bottomSheet"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_report_bottomSheet"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_sub_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/report_sub"
            android:textColor="@color/textView_subTitle_bottomSheet"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_report_bottomSheet"
            app:layout_constraintTop_toBottomOf="@+id/textView_report_bottomSheet" />

        <View
            android:id="@+id/view_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/view_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_sub_report_bottomSheet" />

        <RadioGroup
            android:id="@+id/radioGroup_report_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_report_bottomSheet">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_one_report_bottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copyright"
                android:buttonTint="@color/textView_app_color" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_two_report_bottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sexual"
                android:buttonTint="@color/textView_app_color" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_three_report_bottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other"
                android:buttonTint="@color/textView_app_color" />

        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_report_bottomSheet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/report_reason"
            android:textColorHint="@color/textView_hint_editPro"
            app:boxStrokeColor="@color/textView_box_select_color"
            app:hintTextColor="@color/textView_hint_layout_editPro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_report_bottomSheet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_report_bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textView_subTitle_bottomSheet"
                android:theme="@style/editText_style" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_send_report_bottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/button_bg"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_report_bottomSheet"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>