<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.status.activity.Verification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_icon_verification"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ver_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/title_verification"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_icon_verification"
            app:layout_constraintEnd_toEndOf="@+id/imageView_icon_verification"
            app:layout_constraintStart_toStartOf="@+id/imageView_icon_verification"
            app:layout_constraintTop_toTopOf="@+id/imageView_icon_verification" />

        <ImageView
            android:id="@+id/imageView_verification"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/otp_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_icon_verification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_title_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/enter_code"
            android:textColor="@color/textView_app_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_verification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_subTitle_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/opt_contain"
            android:textColor="@color/textView_verification"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_verification" />

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/yellow"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/textView_app_color"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="4"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="10dp"
            app:itemWidth="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subTitle_verification"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/button_bg"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toStartOf="@+id/button_register_verification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/re_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/color_reg_verification"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_verification"
            app:layout_constraintTop_toTopOf="@+id/button_verification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_resendOtp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/resend_your_otp"
            android:textColor="@color/textView_verification"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/resend_verification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_verification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resend_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/click_hear"
            android:textColor="@color/textView_app_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView_resendOtp_verification"
            app:layout_constraintTop_toTopOf="@+id/textView_resendOtp_verification" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>